<resources>
    <string name="app_name">melixir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="nav_home">Trang chủ</string>
    <string name="nav_product">Sản Phẩm</string>
    <string name="nav_brand">Thương hiệu</string>
    <string name="nav_setting">Cài Đặt</string>
    <string name="nav_profile">Tài Khoản của tôi</string>
    <string name="nav_blog">Blog</string>

    <string name="nav_drawer_open">Mở</string>
    <string name="nav_drawer_close">Đóng</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>